--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- LOADING_TIP_0:0 "East Maqitan Piracy and Turmoil in the steppe has led many navigators to search for a new route in the west."
+ LOADING_TIP_0:0 "East Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes in the west."
  LOADING_TIP_1:0 "Early Ehrenics and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
  LOADING_TIP_2:0 "'Ard Yanduz was a Yaltazim state which unified the aqerbic peninsula in the VII century"
  LOADING_TIP_3:0 "Donuçakar converted to saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
@@ -11,3 +11,4 @@
  LOADING_TIP_9:0 "Geniburgh Company are argenian mercenaries which served in the zakarturi and pamkusean lands - until they grew strong enough to establish their own state, following kakigian collapse."
  LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapsed caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by capiran and aqerbic states."
+ LOADING_TIP_12:0 "Aevadata of Varazanah conquered the pamkusean peninsula in the XIV century, forcing the local population into exile." 
