--- a/localisation/TD_Visparaya_flavour_l_english.yml
+++ b/localisation/TD_Visparaya_flavour_l_english.yml
@@ -10,3 +10,7 @@
  frasatahi_ideas:0 "Frasatahi Ideas"
  frasatahi_ideas_start:0 "Frasatahi Traditions"
  frasatahi_ideas_bonus:0 "Frasatahi Ambitions"
+
+ visparayan_ideas:0 "Visparayan Ideas"
+ visparayan_ideas_start:0 "Visparayan Traditions"
+ visparayan_ideas_bonus:0 "Visparayan Ambitions" 
