--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -147,3 +147,30 @@
  mewitan:0 "Mewitan"
  ehtywiran:0 "Ehtywiran"
  hussen:0 "Hussen"
+ sunbat:0 "Sunbat"
+
+ tonatitlan_group:0 "Tonatitlani"
+ tikinutli:0 "Tikinutli"
+ uyoseotlan:0 "Uyoseotlan"
+ kilitotlan:0 "Kilitotlan"
+ sokititlan:0 'Sokititlan'
+ uekalian:0 "Uekalian"
+
+ lummak_group:0 "Lummak"
+ xamaneh:0 "Xamaneh"
+ masanul:0 "Masanul"
+ nalanak:0 "Nalanak"
+
+ teotloqitl_group:0 "Teotloqitl"
+ xoktiatoyatl:0 "Xoktiatoyatl"
+ xilipokotlani:0 "Xilipokotlani"
+ uaktlana:0 "Uaktlana"
+
+ povativi_group:0 "Povativi"
+ absukhan:0 "Absukhan"
+ boforian:0 "Boforian"
+ srushtan:0 "Srusthan"
+
+ alatyai_group:0 "Alatyai"
+ cirenii:0 "Cirenii"
+ morasari:0 "Morasari"
