pamkusea and the second one + discoveries

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -647,3 +647,8 @@
  VIP_ADJ:0 "Visparayan"
  VAZ:0 "Varazanah"
  VAZ_ADJ:0 "Varazan"
+
+ PAM:0 "Pamkusea"
+ PAM_ADJ:0 "Pamkusean"
+ PAA:0 "Pamapoikia"
+ PAA_ADJ:0 "Pamapoikian"
