--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -59,3 +59,11 @@
 
  kakigia_local_nation_title:0 "Unite the Hordes"
  kakigia_local_nation_desc:0 "Domination over our bretherens will allow us to claim the title of unified horde."
+
+ pamkusea_nation_title:0 "Unite Pamkusea @PAM"
+ pamkusea_nation_desc:0 ""
+
+ pamapoikia_nation_title:0 "Unify Pamapoikia @PAA"
+ pamapoikia_nation_desc:0 ""
+ pamkusea_proper:0 "Pamkusea Proper"
+ pamapoikia_province_group:0 "Pamapoikia"
