saelian empire changes

--- a/localisation/TD_nationformation_l_english.yml
+++ b/localisation/TD_nationformation_l_english.yml
@@ -41,6 +41,7 @@
   
  eneratia_nation_title:0 "Reunite Eneratia @ENE"
  eneratia_nation_desc:0 "Eneratian Empire fell just as it was conceived - through bloody conflicts and dynastical disputes. Now, since almost a millenium since its dissolution, it will stand proudly, united in faith."
+ is_eneratian_emperor_tt:0 "Is the Eneratian Emperor"
  
  marstonia_nation_title:0 "Unite Marstonia @MRS"
  marstonia_nation_desc:0 "Unite our cultural bretherens so we will never have to suffer subjugation again."
