--- a/localisation/TD_saelian_empire_l_english.yml
+++ b/localisation/TD_saelian_empire_l_english.yml
@@ -131,3 +131,8 @@
  saelian.6.desc:0 "Sad news coming from the imperial capital - emperor has declined our petition."
  saelian.6.a:0 "..."
  emperor_not_granted_kingship:0 "Kingship Rejected"
+
+ unite_saelians_title:0 "Unify Saelianism"
+ unite_saelians_desc:0 "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
+ saelianism_united_mod:0 "Saelianism Unified"
+ random_conversion_tt:0 "Every Saelian province will have a 33% chance to convert to our religion."
