--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1312,7 +1312,7 @@
  PROV1311:0 "1311"
  PROV1312:0 "1312"
  PROV1313:0 "1313"
- PROV1314:0 "1314"
+ PROV1314:0 "Asonam"
  PROV1315:0 "Zaoshai"
  PROV1316:0 "Tarthoz"
  PROV1317:0 "1317"
