Technology and Unit Pain (+ minor fixes)
Started rework of Tech groups and their units. Also changed marstonia into western. Organized Unit Localization a little (paradox localization is a mess, help). Also minor fixes with generic mission custom tooltips.

--- a/localisation/TD_Flavour_Generic_Missions_l_english.yml
+++ b/localisation/TD_Flavour_Generic_Missions_l_english.yml
@@ -72,7 +72,7 @@
  TD_generic_goods_produced_development_cost_modifier:0 "Expanded Manufactory Output"
 
 ## Tooltips
- TD_generic_fabricate_claims_tt:0 "If §YBuild an Army§!, §YFind Allies§! and §YPrepare the Economy§! are completed, we will gain §G-50% claim cost reduction§! for §G10§! Years."
- TD_generic_improve_rel_tt:0 "If this mission is completed while having at least §Y1 Ally§!, we will gain §G+15% improve relations§! for §G10§! Years."
- TD_generic_diplo_rel_tt:0 "If this mission is completed while having at least §Y1 Subject§!, we will gain §G+1 diplomatic relation§! for §G10§! Years."
+ TD_generic_fabricate_claims_tt:0 "If §YBuild an Army§!, §YFind Allies§! and §YPrepare the Economy§! are completed, we will gain §G-50% Fabricate Claim Cost§! for §G10§! Years."
+ TD_generic_improve_rel_tt:0 "If this mission is completed while having at least §Y1 Ally§!, we will gain §G+15% Improve Relations§! for §G10§! Years."
+ TD_generic_diplo_rel_tt:0 "If this mission is completed while having at least §Y1 Subject§!, we will gain §G+1 Diplomatic Relations§! for §G10§! Years."
  TD_generic_distribute_5_random_dev:0 "5 random owned core provinces will gain §G1 development of random category§!"
