--- a/localisation/TD_03_missions_generic_l_english.yml
+++ b/localisation/TD_03_missions_generic_l_english.yml
@@ -11,7 +11,7 @@
  TD_Generic_Military_3_title:0 "A Standing Army"
  TD_Generic_Military_3_desc:0 ""
 
- TD_Generic_Military_4_title:0 "Reform The Army"
+ TD_Generic_Military_4_title:0 "Reform the Army"
  TD_Generic_Military_4_desc:0 ""
 
  TD_Generic_Start_Diplo_title:0 "Find Allies"
@@ -29,7 +29,7 @@
  TD_Generic_Diplo_4_title:0 "Great Power Politics"
  TD_Generic_Diplo_4_desc:0 ""
 
- TD_Generic_Start_Admin_title:0 "Prepare The Economy"
+ TD_Generic_Start_Admin_title:0 "Prepare the Economy"
  TD_Generic_Start_Admin_desc:0 ""
 
  TD_Generic_Admin_1_title:0 "Develop the Countryside"
@@ -47,7 +47,7 @@
  TD_Generic_Start_Middle_title:0 "Means of Expansion"
  TD_Generic_Start_Middle_desc:0 ""
 
- TD_Generic_Middle_Final_title:0 "Dawn of the Empire"
+ TD_Generic_Middle_Final_title:0 "Dawn of an Empire"
  TD_Generic_Middle_Final_desc:0 ""
 
 
