--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -1,9 +1,24 @@
 ﻿l_english:
- city_of_capira:0 "Capiranella"
+ city_of_capira:0 "Ancient City of Capiranella"
  city_of_capira_desc:0 "This ancient settlement was once a glorious capital of the Saelian Empire and subsequently the center of Saelian faith. Today the city lies in ruins and is mostly abandoned due to frequent pillaging, raids and overall lack of care."
- league_of_capira:0 "League of Capira"
- league_of_capira_desc:0 "Capiranellan League was founded due to growing threat of chilverchian nations quickly expanding into Camaria. It functions mostly as military alliance with high degree of autonomy for member states"
+ league_of_capira_reform:0 "League of Capira"
+ league_of_capira_reform_desc:0 "Capiranellan League was founded due to growing threat of chilverchian nations quickly expanding into Camaria. It functions mostly as military alliance with high degree of autonomy for member states"
  LEAGUE:0 "League"
  GRAND_LEAGUE:0 "Grand League"
  PRIMO:0 "Primo"
  PRIMA:0 "Prima"
+
+ compagne:0 "Compagne"
+ compagne_long_desc:0 "Compagni di Guerra are members of our league established to protect western camaria from conflict."
+ compagne_title:0 "Compagno di Guerra"
+ compagne_title_plural:0 "Compagnes"
+ compagne_is_our:0 "$NAME|Y$ is our Compagne"
+ is_compagne:0 "Is Compagne"
+ cancel_compagne_title:0 "Cancel Compagne"
+ cancel_compagne_tooltip:0 "Leave the league lead by [From.GetName]"
+ cancel_compagne_desc:0 "Leaving the League will reduce opinion of all League members (including the leader) of us by §R50§!."
+ 
+
+ group_camarian_ideas:0 "Camarian Minor Ideas"
+ group_camarian_ideas_start:0 "Camarian Minor Traditions"
+ group_camarian_ideas_bnus:0 "Camarian Minor Ambitions"
