--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -371,8 +371,10 @@
  COF_ADJ:0 "Conferman"
  MAC:0 "Macono"
  MAC_ADJ:0 "Maconian"
- CAP:0 "Capiranellan League"
+ CAP:0 "Capiranella"
  CAP_ADJ:0 "Capiranellan"
+ ORE:0 "Orenade"
+ ORE_ADJ:0 "Orenadian"
  VEC:0 "Veceingo"
  VEC_ADJ:0 "Veceingian"
  ZON:0 "Zonachia"
