--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -74,3 +74,6 @@
 
  imperial_aevadata_reform:0 "Imperial Aevadata"
  imperial_aevadata_reform_desc:0 "Classic Aevadata government with strict religious laws, social hierarchy, absolute rulership and overall zealousness."
+
+ mudnan_kudsavah_reform:0 "Mudnan Kudsavah"
+ mudnan_kudsavah_reform_desc:0 "Society of Mudnan Kudsavah, meaning holy state, is ruled by ilumist clergy who govern over their pious population."
