--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -68,3 +68,6 @@
  pamapoikia_nation_desc:0 ""
  pamkusea_proper:0 "Pamkusea Proper"
  pamapoikia_province_group:0 "Pamapoikia"
+
+ form_muzbah_title:0 "Unite Muzbah @MUZ"
+ form_muzbah_desc:0 ""
