fixes - estates and disasters

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -149,11 +149,11 @@
  hussen:0 "Hussen"
  sunbat:0 "Sunbat"
 
- tonatitlan_group:0 "Tonatitlani"
+ tonatitlani_group:0 "Tonatitlani"
  tikinutli:0 "Tikinutli"
  uyoseotlan:0 "Uyoseotlan"
  kilitotlan:0 "Kilitotlan"
- sokititlan:0 'Sokititlan'
+ sokititlan:0 "Sokititlan"
  uekalian:0 "Uekalian"
 
  lummak_group:0 "Lummak"
