--- a/localisation/TD_estate_names_l_english.yml
+++ b/localisation/TD_estate_names_l_english.yml
@@ -1,3 +1,5 @@
 ﻿l_english:
  estate_asaman:0 "Asaman"
  estate_matahri:0 "Matahari"
+ estate_ratsunikud:0 "Ratsunikud"
+ estate_kakigos:0 "Kakigos"
