idea names for marches

--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -28,12 +28,19 @@
  group_march_ideas_start:0 "Marcan Traditions"
  group_march_ideas_bonus:0 "Marcan Ambition"
  idea_war_of_the_faithful:0 "War of the Faithful"
+ idea_war_of_the_faithful_desc:0 "Religious fervor in the acerbic borderlands is the most intense in the entire taedian continent. Many pious warriors come here to for glory and to pursue the pious path of war. For the security of the saelian faith, we must destroy our enemies in the west."
  idea_modernized_fortifications:0 "Modern Fortifications"
+ idea_modernized_fortifications_desc:0 "Fallen nusabates of Riyafola and Zibarat have left us a great gift - good fortification. After we came here the only problem was their state of disrepair, but with the development of the art of war they became obsolete. Thanks to the ingenuity of our engineers, they can serve the nation once again."
  idea_land_grants:0 "Land Grants"
+ idea_land_grants_desc:0 "Newly conquered land needs someone to ruler over it. Thankfuly, many nobles from the east are eager to graciously accept our offers of wealth. By giving out land to many local rulers we ensure that the administration isn't stretched and focuses on local development."
  idea_sea_frontier:0 "Sea Frontier"
+ idea_sea_frontier_desc:0 "Victory in the peninsula has made many question our next goal - what to conquer if we reached the end of the world? Many hope of the wealth oversea in places like sahila, visparaya and pamkusea, but some believe that glory will be found overseas."
  idea_pistoleros:0 "The Pistoleros"
+ idea_pistoleros_desc:0 "It is known that the war is the most important factor of scientific advancements. We are the the masters of war, which means that our technology must be superior. Thanks to the efforts of Ramiro de Balucarra the blackpowder was introduced in the battlefield, and with it a new formation of pistoleros, effective troops with low maintenance and training time."
  idea_cultural_inspiration:0 "Cultural assimilation"
+ idea_cultural_inspiration_desc:0 "As our people were settling these lands, one thing became obvious - cultural mixing. Yaltazim men married narbonese women and saelian farmers worked alongside farmers from Altaliqadim. This exchange of ideas opened minds of many of our people, subjecting them to new ways of living and thinking."
  idea_estate_council:0 "Estate Council"
+ idea_estate_council_desc:0 "Decentralized administration has granted estates of our nation even more power than they had in the acerbic homeland. To achieve compromise between clashing forces of estates and the crown, councils started to become a common thing in these areas. Not long after, the idea of ruler and estates working together is seen as obvious, creating greater trust in the government."
 
  marcan_kingdom_ideas:0 "Novoregnian Ideas"
  marcan_kingdom_ideas_start:0 "Novoregnian Traditions"
