lippstadt part 1 - not working yet

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -115,6 +115,27 @@
  SE_incident.3.a:0 "Nevledi must remain as part of the Empire."
  SE_incident.3.b:0 "We can't risk a war with Bogiland"
 
+ incident_league_of_lippstadt:0 "League of Lippstadt"
+ incident_league_of_lippstadt_member_alert:0 "War between the emperor and the electoral council is growing. We have to choose a side in this conflict."
+ incident_league_of_lippstadt_emperor_alert:0 "Power-thirsty electors seek to destroy the Empire from within. We need ensure they are defeated."
+ retain_status_quo_title:0 "Retain the Status Quo"
+ retain_status_quo_desc:0 "The emperor boldly assumes that we will not intervene in his efforts to centralize the power of the empire. We have to step in to ensure the safety of the Saelian Empire."
+ lippstadt_escalation:0 "Lippstadt Escalation"
+ absolutist_reputation:0 "Absolutist Reputation"
+ SE_incident.10.t:0 "The Ultimatum"
+ SE_incident.10.desc:0 ""
+ SE_incident.10.a:0 "Bah! Humbugs!"
+ SE_incident.10.b:0 "Maybe I went a little to far..."
+ SE_incident.11.t:0 "Emperor's Response"
+ SE_incident.11.desc:0 ""
+ SE_incident.11.a:0 "The emperor will pay for this."
+ SE_incident.11.b:0 "Back Down."
+ SE_incident.12.t:0 "League of Lippstadt"
+ SE_incident.12.desc:0 ""
+ SE_incident.12.a:0 "Emperor is right - electors corrupt the Empire."
+ SE_incident.12.b:0 "Tetrarchy will restore integrity to the Empire."
+ 
+
  request_kingship_title:0 "Request Kingship"
  request_kingship_desc:0 "To solidify our claims to this land, we may requests the emperor of the Saelian Empire to grant us is grace and elevate our ruler to a mighty king."
  saelian.4.t:0 "Prince Requests kingship"
