--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -121,7 +121,9 @@
  retain_status_quo_title:0 "Retain the Status Quo"
  retain_status_quo_desc:0 "The emperor boldly assumes that we will not intervene in his efforts to centralize the power of the empire. We have to step in to ensure the safety of the Saelian Empire."
  lippstadt_escalation:0 "Lippstadt Escalation"
+ desc_lippstadt_escalation:0 "The war with the emperor is imminent."
  absolutist_reputation:0 "Absolutist Reputation"
+ desc_absolutist_reputation:0 "Our ruler is known for his ambitions to unify the Empire."
  SE_incident.10.t:0 "The Ultimatum"
  SE_incident.10.desc:0 ""
  SE_incident.10.a:0 "Bah! Humbugs!"
@@ -133,7 +135,31 @@
  SE_incident.12.t:0 "League of Lippstadt"
  SE_incident.12.desc:0 ""
  SE_incident.12.a:0 "Emperor is right - electors corrupt the Empire."
- SE_incident.12.b:0 "Tetrarchy will restore integrity to the Empire."
+ SE_incident.12.b:0 "Tetrarchy will restore integrity to the Empire." 
+ SE_incident.13.t:0 "Emperor Backs Down!"
+ SE_incident.13.desc:0 ""
+ SE_incident.13.a:0 "Very well."
+ SE_incident.14.t:0 "The Aftermath"
+ SE_incident.14.desc:0 ""
+ SE_incident.14.a:0 "Very well."
+ SE_incident.15.t:0 "The Aftermath"
+ SE_incident.15.desc:0 ""
+ SE_incident.15.a:0 "Very well."
+ cb_imperial_domination:0 "Imperial Domination"
+ cb_imperial_domination_desc:0 "We can show who is the true ruler of the Empire."
+ wg_imperial_domination:0 "Imperial Domination"
+ wg_imperial_domination_desc:0 "Wargoal is to show our supremacy by winning battles."
+ LEAGUE_OF_LIIPSTADT_WN:0 "League of Lippstadt"
+
+ po_electoral_domination:0 "Electoral Domination"
+ PEACE_po_electoral_domination:0 "§VElectoral Domination§!"
+ po_electoral_domination_desc:0 "We will assume absolute control over the empire."
+ CB_ALLOWED_po_electoral_domination:0 "Electoral Domination"
+
+ po_imperial_domination:0 "Imperial Domination"
+ PEACE_po_imperial_domination:0 "§VImperial Domination§!"
+ po_imperial_domination_desc:0 "We will assume absolute control over the empire."
+ CB_ALLOWED_po_imperial_domination:0 "Imperial Domination"
  
 
  request_kingship_title:0 "Request Kingship"
@@ -157,3 +183,4 @@
  unite_saelians_desc:0 "Bringing Unity to the Saelian faith will solidify us as the rulers of the world. Pro Deo!"
  saelianism_united_mod:0 "Saelianism Unified"
  random_conversion_tt:0 "Every Saelian province will have a 33% chance to convert to our religion."
+ hre_modifier_tt:0 "Reform modifier will be transfered to our newly unified nation."
