--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -77,3 +77,8 @@
 
  mudnan_kudsavah_reform:0 "Mudnan Kudsavah"
  mudnan_kudsavah_reform_desc:0 "Society of Mudnan Kudsavah, meaning holy state, is ruled by ilumist clergy who govern over their pious population."
+
+ new_saelian_monarchy:0 "Imperium Saelianum"
+ new_saelian_monarchy_desc:0 "Traditional Saelian Government with removed factor of electoral opposition to the will of the Emperor, for safe and secure society."
+ new_saelian_republic:0 "Res Publica Saeliana"
+ new_saelian_republic_desc:0 "Traditional Saelian Government with compromise forged between the Emperor and the Tetrarchy, for safe and secure society."
