--- a/localisation/EU4_l_english.yml
+++ b/localisation/EU4_l_english.yml
@@ -632,49 +632,7 @@
  native_assimilation:0 "Assimilated Natives"
  swedish_hats:0 "Hats in Power"
  swedish_caps:0 "Caps in Power"
- ROM_parliament_name:0 "Senate"
- BYZ_parliament_name:0 "Senate"
- USA_parliament_name:0 "Congress"
- AYD_parliament_name:0 "Meclis"
- CHE_parliament_name:0 "National Council"
- CND_parliament_name:0 "Meclis"
- DUL_parliament_name:0 "Meclis"
- ERE_parliament_name:0 "Meclis"
- FRA_parliament_name:0 "National Assembly"
- GEN_parliament_name:0 "Great Council"
- GRM_parliament_name:0 "Meclis"
- HLR_parliament_name:0 "Reichstag"
- KAR_parliament_name:0 "Meclis"
- LOU_parliament_name:0 "Congress"
- MEN_parliament_name:0 "Meclis"
- MOS_parliament_name:0 "Duma"
- NED_parliament_name:0 "Staten-Generaal"
- PLC_parliament_name:0 "Sejm"
- POL_parliament_name:0 "Sejm"
- PSK_parliament_name:0 "Veche"
- RAM_parliament_name:0 "Meclis"
- RUS_parliament_name:0 "Duma"
- QUE_parliament_name:0 "National Assembly"
- SPA_parliament_name:0 "Cortes"
- SRU_parliament_name:0 "Meclis"
- SWI_parliament_name:0 "Tagsatzung"
- TAU_parliament_name:0 "Hluttaw"
- TUR_parliament_name:0 "Meclis"
- VEN_parliament_name:0 "Great Council"
- WES_parliament_name:0 "Generalrat"
- ITA_parliament_name:0 "Parlamento"
- NOV_parliament_name:0 "Veche"
- BNG_parliament_name:0 "Jatiya Sangsad"
- BHU_parliament_name:0 "Tshogdu"
- BHA_parliament_name:0 "Sansad"
- JAP_parliament_name:0 "Diet"
- PRS_parliament_name:0 "Majlis"
- LUX_parliament_name:0 "D'Chamber"
- IRE_parliament_name:0 "Oireachtas"
- NSS_parliament_name:0 "Council"
- PRY_parliament_name:0 "Council"
- TOR_parliament_name:0 "Council"
- LIB_parliament_name:0 "Council"
+ HLR_parliament_name:0 "Imperial Diet"
  default_parliament_name:0 "Parliament"
  opinion_theocracy_noble:0 "Same Dynasty as Heir"
  devotion:0 "Devotion"
