--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -654,3 +654,6 @@
  PAM_ADJ:0 "Pamkusean"
  PAA:0 "Pamapoikia"
  PAA_ADJ:0 "Pamapoikian"
+
+ SIS:0 "Secundum Imperium Saelianum"
+ SIS_ADJ:0 "Imperial"
