--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -100,6 +100,8 @@
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
  emperor_blessed_war:0 "Blessed Wars"
 
+ incident_active:0 "Incident is Active"
+ desc_incident_active:0 "Empire is too preoccupied with the internal incident to wage wars."
  incident_nevledian_succession:0 "Nevledian Succession"
  incident_nevledian_succession_member_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. The emperor called the imperial diet to resolve this problem."
  incident_nevledian_succession_emperor_alert:0 "Imperial Kingdom of Nevledi has fallen into the hands of [BOG.GetName]. We called the imperial diet to resolve this problem."
@@ -149,7 +151,8 @@
  cb_imperial_domination_desc:0 "We can show who is the true ruler of the Empire."
  wg_imperial_domination:0 "Imperial Domination"
  wg_imperial_domination_desc:0 "Wargoal is to show our supremacy by winning battles."
- LEAGUE_OF_LIIPSTADT_WN:0 "League of Lippstadt"
+ LEAGUE_OF_LIPPSTADT_WN:0 "League of Lippstadt"
+ CANNOT_SIGN_SEPERATE_PEACE_IN_LIPPSTADT:0 "You cannot separate peace in the imperial civil war."
 
  po_electoral_domination:0 "Electoral Domination"
  PEACE_po_electoral_domination:0 "§VElectoral Domination§!"
