--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -19,6 +19,7 @@
  wg_claim_eneratian_emperorship:0 "Claim Emperorship"
  wg_claim_eneratian_emperorship_desc:0 "Wargoal is to show our supremacy by winning battles."
  CLAIM_ENERATIAN_EMPERORSHIP:0 " $ORDER$$FIRST$ war of Eneratian Emperorship"
+ po_claim_eneratian_emperorship:0 "Claim Eneratian Emperorship"
  PEACE_po_claim_eneratian_emperorship:0 "§VClaim Emperorship§!"
  po_claim_eneratian_emperorship_desc:0 "Our ruler will be considered to be the Eneratian Emperor. We will gain extra fervor from this action."
  CB_ALLOWED_po_claim_eneratian_emperorship:0 "Claiming Emperorship"
