--- a/localisation/TD_mercs_l_english.yml
+++ b/localisation/TD_mercs_l_english.yml
@@ -4,3 +4,8 @@
  free_chevaliers_merc:0 "Free Chevaliers"
  glaser_band:0 "Glaser Band"
  elite_geniburgh_forces:0 "§JElite Geniburgher Forces§!"
+
+ merc_elchdorf_band:0 "Elchdorf Band"
+ merc_blue_guard:0 "Blue Guard"
+ merc_freilaufer:0 "Freiläuferen"
+ merc_virgilian_guard:0 "§JVirgilian Guard§!"
