code cleanup + fixes

--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -1,14 +1,14 @@
 ﻿l_english:
  LOADING_TIP_0:0 "East Maqitan Piracy and Turmoil in the steppe has led many navigators to search for new trade routes in the west."
  LOADING_TIP_1:0 "Early Ehrenics and Argenians were famous for their raids along the coast of Silvestria, sea of Furmaria and even as far as Camaria."
- LOADING_TIP_2:0 "'Ard Yanduz was a Yaltazim state which unified the aqerbic peninsula in the VII century"
+ LOADING_TIP_2:0 "'Ard Yanduz was a Yaltazim state which unified the aqerbic peninsula in the VII century."
  LOADING_TIP_3:0 "Donuçakar converted to saelianism after a diplomatic pact between the king and the Sigilian Emperor in the XIII century."
  LOADING_TIP_4:0 "Eneratian Emperorship has degenerated into a merely informal title which is held by a Chofeudian ruler Cyrille Eneratius de Cuei."
  LOADING_TIP_5:0 "Members of the Ramh Usra claim, that they come from musarfic god of war - Alramha."
  LOADING_TIP_6:0 "What was once homeland of the pamkusean people is now ruled by visparayan states - remnants of the Varazani Empire."
  LOADING_TIP_7:0 "Tetrarchy is responsible for electing the next ruler of Sigilian church, but with each year their power over the emperor grows."
  LOADING_TIP_8:0 "Brianola is a peasant republic, but with a dynastical dictatorship in charge"
- LOADING_TIP_9:0 "Geniburgh Company are argenian mercenaries which served in the zakarturi and pamkusean lands - until they grew strong enough to establish their own state, following kakigian collapse."
+ LOADING_TIP_9:0 "Geniburgh Company is a group of argenian mercenaries which served in the zakarturi and pamkusean lands - until they grew strong enough to establish their own state."
  LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapsed caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by capiran and aqerbic states."
  LOADING_TIP_12:0 "Aevadata of Varazanah conquered the pamkusean peninsula in the XIV century, forcing the local population into exile." 
