--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -84,4 +84,4 @@
  new_saelian_republic_desc:0 "Traditional Saelian Government with compromise forged between the Emperor and the Tetrarchy, for safe and secure society."
  
  randwerpen_kingdom_reform:0 "Randwerpen Kingdom"
- randwerpen_kingdom_reform_desc:0 "We are providing our people freedom by having parlament and guaranteed rights which in return makes people more willing to fight for our freedom. They build different fortifications and structures that in case of foreign invasion would help us to push invaders back and make it as hurtful as it is possible for them. These structures could even outlive our state making foreign occupation very difficult."
+ randwerpen_kingdom_reform_desc:0 "We are providing our people freedom by having a parliament and guaranteed rights which in return makes people more willing to fight for our freedom. They build different fortifications and structures that in case of foreign invasion would help us to push invaders back and make it as hurtful as it is possible for them. These structures could even outlive our state making foreign occupation very difficult."
