--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -52,6 +52,7 @@
 
  argenic_group:0 "Argenic"
  argenian:0 "Argenian"
+ niewebehatian:0 "Niewebehatian"
  
  western_anavatic_group:0 "Western Anavatic"
  donucian:0 "Donucian"
