hestan content + puiduhakkurmaa ideas

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -657,3 +657,7 @@
 
  SIS:0 "Secundum Imperium Saelianum"
  SIS_ADJ:0 "Imperial"
+ HES:0 "Hestan"
+ HES_ADJ:0 "Hestani"
+ HUS:0 "Hussestan"
+ HUS_ADJ:0 "Hussestani"
