--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -73,3 +73,7 @@
  form_muzbah_desc:0 ""
 
  niewebehatland_nation:0 "Assume Kakigia Identity"
+ niewebehatland_nation_desc:0 "As we settle into this new and strange land, it becomes clear that we have grown beyond a mere mercenary company. We now need to embrace our new identity."
+
+ hestan_nation:0 "Unite Hestan @HES"
+ 
