valvur ideas loc

--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -21,4 +21,4 @@
 
  group_camarian_ideas:0 "Camarian Minor Ideas"
  group_camarian_ideas_start:0 "Camarian Minor Traditions"
- group_camarian_ideas_bnus:0 "Camarian Minor Ambitions"
+ group_camarian_ideas_bnus:0 "Camarian Minor Ambition"
