--- a/localisation/TD_01_flavour_gyrdia_l_english.yml
+++ b/localisation/TD_01_flavour_gyrdia_l_english.yml
@@ -1,7 +1,11 @@
 ﻿l_english:
+ gyrdian_kingdom_reform:0 "Gyrdian Kingdom"
+ gyrdian_kingdom_reform_desc:0 "DESC"
+ PETTY_KINGDOM:0 "Petty Kingdom"
+ PETTY_KING:0 "Petty King"
  group_gyrdian_ideas:0 "Gyrdian Minor Ideas"
  group_gyrdian_ideas_start:0 "Gyrdian Minor Traditions"
- group_gyrdian_ideas_bonus:0 "Gyrdian Minor Ambitions"
+ group_gyrdian_ideas_bonus:0 "Gyrdian Minor Ambition"
  gyrdia_gyrdian_forestry:0 "Gyrdian Forestry"
  gyrdia_gyrdian_forestry_desc:0 "These lands are known for the ship timber of highest quality. And our people are known to make good ships with this wood. What's there more to say? "
  gyrdia_laws_of_king_bletcu:0 "Laws of King Bletcu"
