--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -1,3 +1,21 @@
 ﻿l_english:
  consolidate_the_steppe:0 "Consolidate the Steppe"
  settlers_pushed_back:0 "Settlers Pushed Back"
+
+ lounavaki_march_ideas:0 "Valvur Ideas"
+ lounavaki_march_ideas_start:0 "Valvur Traditions"
+ lounavaki_march_ideas_bonus:0 "Valvur Ambition"
+ lounavaki_vaista_tactics:0 "Vaista Tactics"
+ lounavaki_vaista_tactics_desc:0 "For the most of history kakigian raiders have been a menace to any civilization trying to develop in the steppe. To effectively fight their bowmen we developed set of battle tactics to counteract them - it appears that a simple shield is quite effective."
+ lounavaki_kakigian_trade:0 "Kakigian Trade"
+ lounavaki_kakigian_trade_desc:0 "There are 3 major trade routes with the east - through maqitan sea, lake hestan and kakigian steppe. If anyone manages to monopolize any of these routes they will achieve greatness."
+ lounavaki_resettle_the_steppe:0 "Resettle the Steppes"
+ lounavaki_resettle_the_steppe_desc:0 "Recent turmoil in the contitent has caused mass loss of life and overall decrease of quality of life. Soil of great quality is left unattended and just waiting for someone to plow it."
+ lounavaki_new_infrastructure:0 "New Infrastructure"
+ lounavaki_new_infrastructure_desc:0 "Anavatians never really needed a unified system of infrastructure thanks to their nomad lifestyle and experience in horse riding. If our modern states wants to survive we must either learn from them or build our own roads."
+ lounavaki_far_reaching_diplomacy:0 "Far Reaching Diplomacy"
+ lounavaki_far_reaching_diplomacy_desc:0 "To survive alone in this hostile environment is almost impossible and plainly stupid. Our diplomats managed to reach far corners of the world - trade deals with ehreni merchants, military advisors from tummland and zakarturi fortification experts have proven their usefulness to our nation."
+ lounavaki_autocratic_rule:0 "Autocratic Rule"
+ lounavaki_autocratic_rule_desc:0 "Due to our expansive nature, order always must have been mantained by a single powerful individual. This has preserved in our cultural tradition to this day." 
+ lounavaki_adapt_and_improve:0 "Adapt and Improve"
+ lounavaki_adapt_and_improve_desc:0 "Prolonged contact with the people of the steppes has made our soldiers and leaders more experienced in fighting against them. Many even adopt their tactics but changa and improve them - laskurian hussars are known for their use of muskets while also terrifying the enemy with their fierece mounts."
