--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -74,3 +74,21 @@
  AQERB_palace_strongholds_desc:0 "Our beautiful peninsula wasn't always a good place to live. Many wars, internal conflicts, invaders from the sea and now from the east have caused widespread devastation in rural areas. With this palaces became obsolete, and elites, wanting to still show off their wealth, started building castles in easily defendable positions, which are characteristic for their elaborate structures and rich decorations."
  AQERB_family_bonds:0 "Family Bonds"
  AQERB_family_bonds_desc:0 "What is more important than family? According to aqerbic, only the true God. Lesser family members who have a slim chance of inheriting anything meaningful often pursue a scholarly or military careers. This helps to keep the power within the elite, as they are both the rulers and advisors."
+
+ nahralnoriyan_ideas:0 "Nahralnoriyan ideas"
+ nahralnoriyan_ideas_start:0 "Nahralnoriyan Traditions"
+ nahralnoriyan_ideas_bonus:0 "Nahralnoriyan Ambition"
+ nahralnoriya_western_expeditions:0 "Western Expeditions"
+ nahralnoriya_western_expeditions_desc:0 "The desire to cross the Niheyan Ocean is not new. Many expeditions attempted to cross the ocean in the past, most notably fleet of 'Ard Yanduz in the VII century. With the advancements in the naval technology and more pragmatic reasons to explore what lies beyond the western horizon we may finally see what new world lies across the sea."
+ nahralnoriya_advanced_irrigation:0 "Advanced Irrigation"
+ nahralnoriya_advanced_irrigation_desc:0 "Our homeland lies in the valley of great river Dhahabi. It supplied first aqerbic settlers in these lands with water and fertile lands, well suited for agriculture. After some time it became apparent that the water needed to be supplied to more dry places further from the river itself. Many of great irrigation canals were build during the rule of Zawarqabadi Nusabate and serve their purpose to this day."
+ nahralnoriya_open_court:0 "Open Court"
+ nahralnoriya_open_court_desc:0 "Most of Nusabates like to brag about their elitism. Keeping everything within the family is seen as the correct way to rule, but they are to blind to see that to rule over your population is to know what they want. This technique of integrating with common folk can bring fresh ideas to the court."
+ nahralnoriya_university_of_alradom:0 "Alradom University"
+ nahralnoriya_university_of_alradom_desc:0 "Alradom is the site of the oldest university in this part of the world. It was founded in the VII century during the rule of Yanduz over Aqerb, but the city itself was an important center of innovation in the region. Greates mathematical minds of our times have studied there, bringing innovation not only to ourselves, but to the entire world."
+ nahralnoriya_bridge_to_the_new_world:0 "Bridge to the New World"
+ nahralnoriya_bridge_to_the_new_world_desc:0 "Our early advancements in Chantlia are paying off. We were first to set up important trade routes and deals with natives, practically monopolizing trade with the New World. Gold, tobacco, cocoa and cotton flow through Nahralnoriya daily, bringing prosperity to our people."
+ nahralnoriya_protector_of_aqerb:0 "Protector of Aqerb"
+ nahralnoriya_protector_of_aqerb_desc:0 "Saelians think they can conquer people of yaltazim withouth any repercussions. They are partially true - for most of the time the peninsula was disunited and easy to conquer. If we don't want to be destroyed by the invaders, we must unite our people under common banner and show that we are the true rulers of Aqerb!"
+ nahralnoriya_spread_true_word:0 "Spread the True Word"
+ nahralnoriya_spread_true_word_desc:0 "When we first reached Chantlia, communication with the natives was hard. After first translators started to appear, it became obvious that many things that are obvious to us are unthinkable to a tribal mind. To make colonization of these lands easier, many institutions were created, one of which was 'Institute of the True Word', meant to teach natives the basics of Yaltazim. Many techniques developed by them are used by missionaries in other parts of the word to this day."
