trade goods + dev rebalance

--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -45,3 +45,4 @@
  thiccet_region:0 "Thiccet"
  visparaya_region:0 "Visparaya"
  qawartia_region:0 "Qawartia"
+ east_kakigia_region:0 "East Kakigia"
