--- a/localisation/TD_superregions_l_english.yml
+++ b/localisation/TD_superregions_l_english.yml
@@ -9,3 +9,4 @@
  northern_sahila_superregion:0 "Northern Sahila"
  westcoast_superregion:0 "Westcoast"
  greater_tarhia_superregion:0 "Greater Tarhia"
+ central_steppe_superregion:0 "Central Steppe"
