--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -22,3 +22,6 @@
  group_camarian_ideas:0 "Camarian Minor Ideas"
  group_camarian_ideas_start:0 "Camarian Minor Traditions"
  group_camarian_ideas_bnus:0 "Camarian Minor Ambition"
+
+ establish_new_mine_title:0 "Build a new Gold Mine"
+ establish_new_mine_desc:0 "There are rumors of potential gold underneath a town of Rivelea at the foot of the western Cacumuds. If we invest in the efforts to find it it might benefit our economy and secure our own gold supply."
