--- a/localisation/TD_01_flavour_camaria_l_english.yml
+++ b/localisation/TD_01_flavour_camaria_l_english.yml
@@ -25,3 +25,5 @@
 
  establish_new_mine_title:0 "Build a new Gold Mine"
  establish_new_mine_desc:0 "There are rumors of potential gold underneath a town of Rivelea at the foot of the western Cacumuds. If we invest in the efforts to find it it might benefit our economy and secure our own gold supply."
+ fresh_gold_vein:0 "Fresh Gold Vein"
+ fresh_gold_vein_desc:0 "This province is prospering due to large newly found gold vein."
