musarfic rulers + usra gov name

--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -12,9 +12,13 @@
 
  usra_reform:0 "Usra"
  usra_reform_desc:0 "Usra DESC"
- 1_USRA:0 "Usra"
- 2_USRA:0 "Grand Usra"
- 3_USRA:0 "Grand Usra"
+ USRA:0 "Usra"
+ GRAND_USRA:0 "Grand Usra"
+ GRAND_USRA:0 "Grand Usra"
+ ABUSRA:0 "Abusra"
+ GRAND_ABUSRA:0 "Grand Abusra"
+ AMUSRA:0 "Grand Amusra"
+ GRAND_AMUSRA:0 "Grand Amusra"
 
  marstonian_pirate_reform:0 "Marstonian Pirates"
  marstonian_pirate_reform_desc:0 "Marstonian Pirates DESC"
