--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -13,6 +13,9 @@
  doniepr_estuary_modifier:0 "Doniepr Estuary"
  timis_estuary_modifier:0 "Timis Estuary"
  kidinare_estuary_modifier:0 "Kidinare Estuary"
+ fadi_estuary_modifier:0 "Fadi Estuary"
+ rasus_estuary_modifier:0 "Rasus Estuary"
+
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
  mezonian_toll:0 "Mezonian Toll"
