--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -48,4 +48,4 @@
  qubrayia_tradenode:0 "Qubrayia"
  ehwitraw_tradenode:0 "Ehwitraw"
  mewitasr_tradenode:0 "Mewitasr"
- 
+ east_kakigia_tradenode:0 "East Kakigia"
