--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -34,3 +34,6 @@
  chantlian_paganism:0 "Chantlian Paganism"
  itonatilu:0 "Itonatilu"
  lummak_mythology:0 "Lummak Mythology"
+
+ tanagan:0 "Tanagan"
+ orundes:0 "Orundes"
