--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -663,3 +663,8 @@
  HUS_ADJ:0 "Hussestani"
  MET:0 "Metzar"
  MET_ADJ:0 "Metzari"
+
+ CIR:0 "Cireni"
+ CIR_ADJ:0 "Cirenii"
+ MOR:0 "Morasar"
+ MOR_ADJ:0 "Morasari"
