--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -92,3 +92,21 @@
  nahralnoriya_protector_of_aqerb_desc:0 "Saelians think they can conquer people of yaltazim withouth any repercussions. They are partially true - for most of the time the peninsula was disunited and easy to conquer. If we don't want to be destroyed by the invaders, we must unite our people under common banner and show that we are the true rulers of Aqerb!"
  nahralnoriya_spread_true_word:0 "Spread the True Word"
  nahralnoriya_spread_true_word_desc:0 "When we first reached Chantlia, communication with the natives was hard. After first translators started to appear, it became obvious that many things that are obvious to us are unthinkable to a tribal mind. To make colonization of these lands easier, many institutions were created, one of which was 'Institute of the True Word', meant to teach natives the basics of Yaltazim. Many techniques developed by them are used by missionaries in other parts of the word to this day."
+
+ ignidunta_ideas:0 "Ingidunter ideas"
+ ignidunta_ideas_start:0 "Ingidunter Traditions"
+ ignidunta_ideas_bonus:0 "Ingidunter Ambition"
+ ignidunta_acerbic_pioneers:0 "Acerbic Pioneers"
+ ignidunta_acerbic_pioneers_desc:0 "People of Ignidunta are from lineage of settlers from the times of emperor Saelius himself. He wanted to strengthen control in this part of his empire due to frequent clashes with local population. Over time, we achieved independence and expanded more and more into the peninsula. Soon after the legacy of our conquests was overshadowed by aggressive expansion of Enrique II. But we remember the time when it was us who ruled these lands."
+ ignidunta_go_east:0 "Go east"
+ ignidunta_go_east_desc:0 "Every merchant known that the farther your reach is, the more money you can earn as a middleman. This has been a mantra of many ignider rulers in the past and is followed to this day. Our merchants have maintain trade deals as far as Mesutia and Samadia."
+ ignidunta_navarecipan_dockyards:0 "Dockyards of Navarecipa"
+ ignidunta_navarecipan_dockyards_desc:0 "Navarecipa is not only our glorious capital, but also where the large majority of our ships are made. Vessels ranging from small fishing boats to massive trading Fleets are build there on a daily basis by experienced shipwrights."
+ ignidunta_board_of_merchants:0 "Board of Merchants"
+ ignidunta_board_of_merchants_desc:0 "The board was created to better manage vast network of trade. Instead of allowing every merchant to work for themself, they can work together to achieve greater profit. This also provides the state with advise on mercantile and naval matters from experts in these field."
+ ignidunta_protection_of_enterprise:0 "Protection of Enterprise"
+ ignidunta_protection_of_enterprise_desc:0 "When trade is state's one of the biggest sources of income it is crucial to make sure that this flow of gold is stable. Thanks to our grand dockyards and seasoned seamen we can manage a great fleet to protect our merchant and our nation from any potential threats."
+ ignidunta_cutting_edge_innovations:0 "Eastern Innovations"
+ ignidunta_cutting_edge_innovations_desc:0 "Trading in Pemenia has brought many innovations to our land like silk, 'toilet paper' and - most importantly - corned gunpowder. Thanks to its explosive properties it was quickly adopted by many military engineers and captains in our nation."
+ ignidunta_government_and_its_people:0 "Government and the People"
+ ignidunta_government_and_its_people_desc:0 "With republican tradition dating back to old camarian culture and introduction of merchant board system, the idea of democracy became very popular not only among our population but also the ruling elite, seeing it as a way to understand needs of the country for prosperity and patriotism."
