donucakar cultures and releasables

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -668,3 +668,12 @@
  CIR_ADJ:0 "Cirenii"
  MOR:0 "Morasar"
  MOR_ADJ:0 "Morasari"
+
+ CAD:0 "Cadiziero"
+ CAD_ADJ:0 "Cadizieran"
+ YAN:0 "Yanla"
+ YAN_ADJ:0 "Yanlan"
+ GOR:0 "Gormad"
+ GOR_ADJ:0 "Gormadi"
+ GAR:0 "Garituk"
+ GAR_ADJ:0 "Garituki"
